# rustigen

./: BLUEPRINT.md  CHANGELOG.md  Cargo.toml  README.md
scratch/: autopost.ps1  test_yt_meta.py
src/: agent.rs  main.rs
static/: app.js  index.html  style.css
